<resources>
    <string name="app_name">GasCompanion</string>
    <string name="facebook_app_id">161815151048402</string>
    <string name="fb_login_protocol_scheme">fb161815151048402</string>
    <string name="google_maps_key">AIzaSyDK0nI90G747o2B0MKdvrMhVEedYUFSSTY</string>
    <string name="google_server_api_key">AIzaSyDK0nI90G747o2B0MKdvrMhVEedYUFSSTY</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="empty_email">Enter email address!</string>
    <string name="empty_password">Enter password!</string>
    <string name="empty_reset_email">Enter your registered email address!</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up.</string>
    <string name="email_not_verified">Please check your inbox for a verification email and follow the provided link to continue.</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_facebook">Login with Facebook</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_log_out">Log Out</string>
    <string name="msg_log_out">Do you want to logout?</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="place_string">Place</string>
    <string name="profile_string">Profile</string>
    <string name="history_string">History</string>
    <string name="payment_string">Payment</string>
    <string name="help_string">Help</string>

    <string name="ok_string">OK</string>
    <string name="cancel_string">Anuluj</string>
    <string name="enter_string">Wybierz</string>

    <string name="list_string">Lista</string>
    <string name="map_string">Mapa</string>
    <string name="price_per_litre_label">Cena za litr (zł)</string>
    <string name="date">Data</string>
    <string name="add">Dodaj</string>

</resources>
