<!-- fragment_edit_name.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_name"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:layout_gravity="center" android:orientation="vertical"
    android:padding="25dp">

    <TextView
        android:id="@+id/pricePerLitreTextView"
        android:text="@string/price_per_litre_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/pricePerLitreEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:imeOptions="actionDone"
        android:digits="0123456789.,"/>
    <TextView
        android:id="@+id/priceEntryDateTextView"
        android:text="@string/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <DatePicker
        android:id="@+id/priceEntryDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/priceEntrySubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"/>
</LinearLayout>