<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Anna Kowalska"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginLeft="180dp"
                android:layout_gravity="center_vertical"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_string"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:layout_gravity="center_vertical"/>

                <ImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_arrow"
                    android:background="@drawable/bg_arrow"
                    android:layout_gravity="right|center_vertical"/>

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/input_login_hint"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history_string"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:layout_gravity="center_vertical"/>

                <ImageView
                    android:id="@+id/iv_history"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_arrow"
                    android:background="@drawable/bg_arrow"
                    android:layout_gravity="right|center_vertical"/>

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/input_login_hint"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/input_login_hint"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/input_login_hint"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/btn_reset_password"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/btn_reset_password"
                    android:background="@drawable/round_gradient_button"
                    android:textColor="@color/white"
                    android:layout_marginRight="30dp"/>

                <Button
                    android:id="@+id/btn_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/btn_log_out"
                    android:textColor="@color/white"
                    android:background="@drawable/round_gradient_button"/>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|bottom"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>